--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/native": "^6.1.6",
+    "date-fns": "^2.29.3",
     "react": "18.2.0",
     "react-native": "0.71.4",
     "react-native-safe-area-context": "^4.5.0",
