--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "react-native-reanimated": "^3.0.2",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "^3.20.0",
-    "react-native-svg": "^13.9.0"
+    "react-native-splash-screen": "^3.3.0",
+    "react-native-svg": "^13.9.0",
+    "victory-native": "^36.6.8"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
