--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "lodash": "^4.17.21",
     "react": "18.2.0",
     "react-native": "0.71.4",
+    "react-native-config": "^1.5.0",
     "react-native-gesture-handler": "^2.9.0",
     "react-native-reanimated": "^3.0.2",
     "react-native-safe-area-context": "^4.5.0",
